--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 </head>
 <body>
     <div class="container">
-        <button id="play-button">Klicke hier um einen Gutschein zu erhalten</button>
+        <button id="play-button">Klicke hier für eine Überraschung</button>
         <div id="animation-container">
             <div class="cats-container">
                 <div class="cat cat-large cat-left">
@@ -298,7 +298,7 @@
             <div class="heart">❤</div>
         </div>
     </div>
-    <audio id="reality-audio" src="audio/gutschein.wav"></audio>
+    <audio id="reality-audio" src="audio/betzies.wav"></audio>
     <script>
         const button = document.getElementById('play-button');
         const audio = document.getElementById('reality-audio');
@@ -307,11 +307,11 @@
         button.addEventListener('click', () => {
             if(audio.paused) {
                 audio.play().catch(err => console.log("Autoplay blockiert:", err));
-                button.textContent = "▶ Du hast dir eben einen Gutschein verdient";
+                button.textContent = "▶ Betziesdorf on TOP!";
                 animationContainer.classList.add('show');
             } else {
                 audio.pause();
-                button.textContent = "Klicke hier um den Gutschein zu erhalten";
+                button.textContent = "Klicke hier für eine Überraschung";
                 animationContainer.classList.remove('show');
             }
         });
