--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 animationContainer.classList.add('show');
             } else {
                 audio.pause();
-                button.textContent = "Klicke hier für eine Überraschung";
+                button.textContent = "Spielt lieber den Song weiter ihr Affen!";
                 animationContainer.classList.remove('show');
             }
         });
